# Arduino_Watering_System

./: .clang-format  README.md  index.md  license.txt
bak/deployment/: PS_func.cpp  PS_func.h  deployment.ino
deployment/: PS_func.cpp  PS_func.h  deployment.ino  parameter.h  sketch.ino  time.cpp  time.h
deployment/docs/: Arduino_Watering_System_Documentation.md
docs/: Arduino_Watering_System_Documentation.md
docs/SimpleSystem/: SimpleSystem.ino  SimpleSystemCircuit.fzz
docs/circuit_diagram/: Arduino_Pump_Control.fzz
docs/development_environment/: repo_structure.md
docs/memory_usage/: ram_report.txt
docs/software/: Arduino_Watering_System_Documentation.md
docs/vscode_config/vscode/: launch.json  settings.json
src/: Arduino_PS.cpp  CMakeLists.txt  PS_func.cpp  PS_func.h  global.h  mock_arduino.cpp  mock_arduino.h  mytime.cpp  parameter.h  test_mocks.cpp  time.cpp  time.h  unit_test.cpp
src/deployment/: PS_func.cpp  PS_func.h  deployment.ino  mytime.cpp  mytime.h  parameter.h
src/include/: PS_func.h  mytime.h  parameter.h
src/mock/: mock_arduino.cpp  mock_arduino.h
src/test/: CMakeLists.txt  gtest_main.cpp  mocks_test.cpp  test_Time.h  test_WaterSystem.h  test_main_Mocks.cpp  test_main_Time.cpp  test_main_WaterSystem.cpp  test_main_all.cpp  test_mocks.h  test_unit.cpp  time_test.cpp  water_system_test.cpp
tools/SetRealTimeClock/ConfigureRealTimeClock/: ConfigureRealTimeClock.ino
